<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/current_stock_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_left"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="26dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="17dp"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AAPL"
                android:id="@+id/current_stock_symbol"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="4dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apple Inc."
                android:id="@+id/current_stock_name"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_stock_star"
            android:background="@drawable/ic_star"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="12dp" />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:clickable="true"
                android:id="@+id/chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chart"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/montserrat"
                android:textSize="22sp"
                android:layout_marginEnd="20dp"
                android:focusable="true" />

            <TextView
                android:clickable="true"
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textColor="@color/colorGrey"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"
                android:layout_marginEnd="20dp"
                android:focusable="true" />

            <TextView
                android:clickable="true"
                android:id="@+id/news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textColor="@color/colorGrey"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"
                android:layout_marginEnd="20dp"
                android:focusable="true" />

            <TextView
                android:clickable="true"
                android:id="@+id/forecasts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forecasts"
                android:textColor="@color/colorGrey"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"
                android:layout_marginEnd="20dp"
                android:focusable="true" />

            <TextView
                android:clickable="true"
                android:id="@+id/ideas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ideas"
                android:textColor="@color/colorGrey"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"
                android:paddingRight="40dp"
                android:focusable="true" />

        </LinearLayout>

    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E5E5E5"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:id="@+id/fragment_stock_container"/>

</LinearLayout>